<resources>

    // Base Strings
    <string name="app_name">SimpleSpeedDial</string>
    <string name="app_name_pretty">Simple Speed Dial</string>
    <string name="default_string">Default</string>
    <string name="default_string_name">Name</string>
    <string name="default_string_number">Number</string>
    <string name="default_string_number_type">Number Type</string>

    // Primary Display Fragment Strings
    <string name="primary_display_contact_list_button">Add From Contacts</string>
    <string name="primary_display_current_speed_list_button">@string/current_speed_dial_title</string>
    <string name="primary_display_quick_add_title_tag_text">Quickly Add a Speed Dial Button</string>
    <string name="primary_display_quick_add_btn_text">Add to Speed Dial</string>
    <string name="primary_display_invalid_name">Please enter a name</string>
    <string name="primary_display_invalid_number">Please enter a number</string>
    <string name="primary_display_invalid_number_type">Please enter a number type</string>
    <string name="primary_display_configuring_large_widget">Configuring Large Widget</string>
    <string name="primary_display_configuring_single_tile_widget">Configuring Single Tile Widget</string>

    <string-array name="number_types">
        <item>Home</item>
        <item>Mobile</item>
        <item>Work</item>
    </string-array>

    // Widget Strings
    <string name="widget_empty_text">Add some contacts!</string>

    // Contact Fragment Strings
    <string name="contact_recycler_title">Contact List</string>
    <string name="contact_recycler_select_item_info">Select a Contact and a number to add it to the large widget.</string>

    // Current Speed Dial Fragment Strings
    <string name="current_speed_dial_title">Current Speed Dial Buttons</string>
    <string name="current_speed_dial_swipe_delete">Swipe to remove from large widget</string>


    // About Dialog Strings
    <string name="about_title">@string/app_name_pretty</string>
    <string name="about_version">"Version:   "</string>
    <string name="about_third_party_licenses">Third Party Licenses</string>
    <string name="about_license_dialog_title">"PSDev's License Dialog"</string>
    <string name="about_license_dialog_url">http://github.psdev.de/LicensesDialog/</string>
    <string name="about_license_dialog_copyright">Copyright 2013 Philip Schiffer</string>
    <string name="about_picasso_license_title">Picasso License</string>
    <string name="about_picasso_url">https://square.github.io/picasso/</string>
    <string name="about_picasso_copyright">Copyright 2013 Square, Inc.</string>
    <string name="about_timber_license_title">Timber License</string>
    <string name="about_timber_url">https://github.com/JakeWharton/timber</string>
    <string name="about_timber_copyright">Copyright 2013 Jake Wharton</string>
    <string name="about_gson_license_title">Gson License</string>
    <string name="about_gson_url">https://github.com/google/gson</string>
    <string name="about_gson_copyright">Copyright 2008 Google Inc.</string>
    <string name="about_text_drawable_license_title">Text Drawable Lib</string>
    <string name="about_text_drawable_url">https://github.com/amulyakhare/TextDrawable</string>
    <string name="about_text_drawable_copyright">Copyright 2014 Amulya Khare</string>

    <string name="about_icons_eight_title">Icons8.com</string>
    <string name="about_icons_eight_url">https://Icons8.com</string>

    // Overflow Menu Strings
    <string name="menu_preferences_title">Preferences</string>
    <string name="menu_about_title">About</string>
    <string name="menu_refresh_buttons">Refresh Speed Dial Buttons</string>
    <string name="menu_refreshed_text">Refreshed</string>

    // Shared Preferences Strings
    <string name="shared_pref_dial_type_key">dialType</string>
    <string name="shared_pref_use_contact_photo_key">useContactPhoto</string>
    <string name="welcome_fragment_get_started">Get Started</string>

    // Free version usage notice
    <string name="free_version_alert_title">Oops!! Ran out of slots!!</string>
    <string name="free_version_button_text">Ahh Ok.  Close.</string>
    <string name="free_version_too_many_single_tile_widgets">It seems you have used the maximum number of free speed dial buttons. If you need more you can try removing one of the buttons you already have or get the full version of Simple Speed Dial which offers unlimited buttons and is ad free!!</string>

</resources>
