<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp">

    <TextView
        android:id="@+id/primary_display_configuring_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primary_display_configuring_large_widget"
        android:textSize="@dimen/header_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLine"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/primary_display_quick_add_constraint_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideLine">

        <TextView
            android:id="@+id/primary_display_quick_add_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primary_display_quick_add_title_tag_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/primary_display_quick_add_name_et"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:layout_margin="24dp"
            android:autofillHints="@string/default_string_name"
            android:hint="@string/default_string_name"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/primary_display_quick_add_tag" />

        <EditText
            android:id="@+id/primary_display_quick_add_number_et"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:autofillHints="@string/default_string_number"
            android:hint="@string/default_string_number"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primary_display_quick_add_name_et" />

        <AutoCompleteTextView
            android:id="@+id/primary_display_quick_add_number_type"
            android:layout_width="220dp"
            android:layout_height="56dp"
            android:autofillHints="@string/default_string_number_type"
            android:hint="@string/default_string_number_type"
            android:inputType="textNoSuggestions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primary_display_quick_add_number_et" />

        <Button
            android:id="@+id/primary_display_quick_add_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/primary_display_quick_add_btn_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/primary_display_quick_add_number_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/primary_display_contact_list_btn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primary_display_contact_list_button"
        app:layout_constraintBottom_toTopOf="@+id/primary_display_contact_current_speed_list_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_display_quick_add_constraint_frame" />

    <Button
        android:id="@+id/primary_display_contact_current_speed_list_btn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/primary_display_current_speed_list_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_display_contact_list_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>