<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/current_speed_dial_recycler_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <ImageView
        android:id="@+id/current_speed_dial_recycler_item_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/recycler_fragment_image_dimensions"
        android:minWidth="@dimen/recycler_fragment_image_dimensions"
        android:layout_gravity="start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/current_speed_dial_recycler_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_string_name" />

        <TextView
            android:id="@+id/current_speed_dial_recycler_item_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_string_number" />

        <TextView
            android:id="@+id/current_speed_dial_recycler_item_number_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_string_number_type" />

    </LinearLayout>
</androidx.cardview.widget.CardView>